HACK: fix CSS for ios platform. workaround BUG: position:fixed and z-index not working together

--- a/src/app/google-maps/google-maps.component.scss
+++ b/src/app/google-maps/google-maps.component.scss
@@ -4,6 +4,11 @@ app-google-maps {
 	height: 40%;
 }
 
+// required here for mobile safari
+.plt-ios ion-app.fullscreen-gallery app-google-maps {
+	height:0;
+}
+
 @media only screen 
 	and (max-width: 414px) 
 	and (max-height: 812px) 
